[package]
name = "glisp"
version = "0.0.2"
authors = ["Jordan Osborn <jordanosborn0@gmail.com>"]
edition = "2018"
exclude = [
    "test.glisp"
]
license = "MIT"
description = "A lisp for genetic programming"
documentation = "https://docs.rs/crate/glisp"
homepage = "https://github.com/jordanosborn/Glisp"
repository = "https://github.com/jordanosborn/Glisp"
readme = "README.md"


[dependencies]
rayon = "1.0.3"
maplit = "1.0.1"
libc = "0.2.48"
cpp = "0.5.1"

[build-dependencies]
cpp_build = "0.5.1"
cc = { version = "1.0.29", features = ["parallel"] }