[package]
name = "glisp"
version = "0.0.4"
authors = ["Jordan Osborn <jordan@osborn.dev>"]
edition = "2018"
exclude = [
    "examples/test.glisp"
]
license = "MIT"
description = "A lisp for genetic programming"
documentation = "https://docs.rs/crate/glisp"
homepage = "https://github.com/jordanosborn/Glisp"
repository = "https://github.com/jordanosborn/Glisp"
readme = "README.md"


[dependencies]
rayon = "1.0.3"
indicatif = "0.11.0"
rustyline = "3.0.0"
maplit = "1.0.1"
libc = "0.2.50"
cpp = "0.5.1"
regex = "1.1.2"
lazy_static = "1.3.0"

[build-dependencies]
cpp_build = "0.5.1"
cargo-instruments = "0.2.0"
cc = { version = "1.0.31", features = ["parallel"] }